Prevent programmatic scrolling within truncated room sublists (#7191)

--- a/res/css/views/rooms/_RoomSublist.scss
+++ b/res/css/views/rooms/_RoomSublist.scss
@@ -187,6 +187,7 @@ limitations under the License.
         .mx_RoomSublist_tiles {
             flex: 1 0 0;
             overflow: hidden;
+            overflow: clip;
             // need this to be flex otherwise the overflow hidden from above
             // sometimes vertically centers the clipped list ... no idea why it would do this
             // as the box model should be top aligned. Happens in both FF and Chromium
